Masterlist validation report (NO FLAG)

--- a/dmu6/dmu6_v_AKARI-SEP/help_akari-sep_report.html
+++ b/dmu6/dmu6_v_AKARI-SEP/help_akari-sep_report.html
@@ -280,8 +280,8 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 
 <span id="save_widget" class="pull-left save_widget">
     <span id="notebook_name" class="filename">help_akari-sep_report</span>
-    <span class="checkpoint_status" title="Wed, Jan 31, 2018 10:05 AM">Last Checkpoint: 2 minutes ago</span>
-    <span class="autosave_status">(unsaved changes)</span>
+    <span class="checkpoint_status" title="Fri, Feb 2, 2018 11:13 AM">Last Checkpoint: a few seconds ago</span>
+    <span class="autosave_status">(autosaved)</span>
 </span>
 
 <span id="kernel_logo_widget">
@@ -334,7 +334,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                         <!-- <hr/> -->
                         <li class="divider"></li>
                         <li id="restore_checkpoint" class="dropdown-submenu"><a href="#">Revert to Checkpoint</a>
-                          <ul class="dropdown-menu"><li><a href="#">Wednesday, January 31, 2018 10:05 AM</a></li></ul>
+                          <ul class="dropdown-menu"><li><a href="#">Friday, February 2, 2018 11:13 AM</a></li></ul>
                         </li>
                         <li class="divider"></li>
                         <li id="print_preview"><a href="#">Print Preview</a></li>
@@ -533,7 +533,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 <div id="ipython-main-app">
     <div id="notebook_panel">
         <div id="notebook" tabindex="-1"><div class="container" id="notebook-container"><div class="cell text_cell rendered unselected" tabindex="2"><div class="prompt input_prompt"></div><div class="inner_cell"><div class="ctb_hideshow"><div class="celltoolbar"></div></div><div class="input_area"><div class="CodeMirror cm-s-default CodeMirror-wrap"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 5.60001px; left: 169.6px;"><textarea style="position: absolute; padding: 0px; width: 1px; height: 1em; outline: medium none;" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0" wrap="off">AKARI-SEP</textarea></div><div class="CodeMirror-vscrollbar" cm-not-content="true" style="bottom: 0px;"><div style="min-width: 1px; height: 0px;"></div></div><div class="CodeMirror-hscrollbar" cm-not-content="true"><div style="height: 100%; min-height: 1px; width: 0px;"></div></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1" draggable="true"><div class="CodeMirror-sizer" style="margin-left: 0px; padding-right: 0px; padding-bottom: 0px; margin-bottom: -15px; border-right-width: 15px; min-height: 33px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines"><div style="position: relative; outline: medium none;"><div class="CodeMirror-measure"><pre><span>xxxxxxxxxx</span></pre></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-cursors" style=""><div class="CodeMirror-cursor" style="left: 164px; top: 0px; height: 21.5px;">&nbsp;</div></div><div class="CodeMirror-code"><pre class=" CodeMirror-line "><span><span class="cm-header cm-header-1"># AKARI-SEP: Validation Report (FULL)</span></span></pre></div></div></div></div></div><div style="position: absolute; height: 15px; width: 1px; top: 33px;"></div><div class="CodeMirror-gutters" style="display: none; height: 48px;"></div></div></div></div><div class="text_cell_render rendered_html" tabindex="-1"><h1 id="AKARI-SEP:-Validation-Report-(FULL)">AKARI-SEP: Validation Report (FULL)<a class="anchor-link" href="#AKARI-SEP:-Validation-Report-%28FULL%29">¶</a></h1>
-</div></div></div><div class="cell text_cell rendered unselected" tabindex="2"><div class="prompt input_prompt"></div><div class="inner_cell"><div class="ctb_hideshow"><div class="celltoolbar"></div></div><div class="input_area"><div class="CodeMirror cm-s-default CodeMirror-wrap"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 294.6px; left: 565.6px;"><textarea style="position: absolute; padding: 0px; width: 1px; height: 1em; outline: medium none;" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0" wrap="off">,</textarea></div><div class="CodeMirror-vscrollbar" cm-not-content="true" style="bottom: 0px;"><div style="min-width: 1px; height: 0px;"></div></div><div class="CodeMirror-hscrollbar" cm-not-content="true"><div style="height: 100%; min-height: 1px; width: 0px;"></div></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1" draggable="true"><div class="CodeMirror-sizer" style="margin-left: 0px; padding-right: 0px; padding-bottom: 0px; margin-bottom: -15px; border-right-width: 15px; min-height: 334px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines"><div style="position: relative; outline: medium none;"><div class="CodeMirror-measure"><pre><span>xxxxxxxxxx</span></pre></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-cursors" style="visibility: hidden;"><div class="CodeMirror-cursor" style="left: 560px; top: 289px; height: 17px;">&nbsp;</div></div><div class="CodeMirror-code" style=""><pre class=" CodeMirror-line "><span>Master catalogue used: <span class="cm-strong">__master_catalogue_akari-sep_20180122.fits__</span><span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span>Number of rows: 844,172</span></pre><pre class=" CodeMirror-line "><span><span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span>Surveys included:<span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span><span cm-text="">​</span></span></pre><pre class=" CodeMirror-line "><span>| Survey     | Telescope / Instrument      |      Filters (detection band in bold)      | Location                    |</span></pre><pre class=" CodeMirror-line "><span>|------------|-----------------------------|:------------------------------------------:|-----------------------------|</span></pre><pre class=" CodeMirror-line "><span>| ESIS       | ESO 2.2/WFI                 | BVR                                        | dmu0_ESIS-VOICE             |</span></pre><pre class=" CodeMirror-line "><span>| DES-DEEP   | Blanco/DECAM<span class="cm-tab" role="presentation" cm-text="	"> </span>               | grizy                                      | dmu0_DES<span class="cm-tab" role="presentation" cm-text="	">  </span>      |</span></pre><pre class=" CodeMirror-line "><span>| VIDEO      | VISTA/VIRCAM<span class="cm-tab" role="presentation" cm-text="	"> </span>               | Y,J,H,Ks<span class="cm-tab" role="presentation" cm-text="	">   </span>                                | dmu0_VISTA-VIDEO            | </span></pre><pre class=" CodeMirror-line "><span>| VHS        | VISTA/VIRCAM<span class="cm-tab" role="presentation" cm-text="	"> </span>               | Y,J,H,Ks<span class="cm-tab" role="presentation" cm-text="	">   </span>                                | dmu0_VISTA-VHS              |</span></pre><pre class=" CodeMirror-line "><span>| SWIRE      | Spitzer/IRAC MIPS           | IRAC1234                                   | dmu0_DataFusion-Spitzer<span class="cm-tab" role="presentation" cm-text="	">   </span>  | </span></pre><pre class=" CodeMirror-line "><span>| SERVS      | Spitzer/IRAC                | IRAC12                                     | dmu0_DataFusion-Spitzer<span class="cm-tab" role="presentation" cm-text="	">   </span>  | </span></pre><pre class=" CodeMirror-line "><span> </span></pre><pre class=" CodeMirror-line "><span><span cm-text="">​</span></span></pre><pre class=" CodeMirror-line "><span><span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span><span class="cm-strong">__NB: On AKARI-SEP there are no bands with multiple observations. We then cannot flag outliers.</span><span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span><span class="cm-strong">Also, there are no sources, with "weird" magnitude or magnitude error, to flag in this field.__</span></span></pre><pre class=" CodeMirror-line "><span><span cm-text="">​</span></span></pre></div></div></div></div></div><div style="position: absolute; height: 15px; width: 1px; top: 334px;"></div><div class="CodeMirror-gutters" style="display: none; height: 349px;"></div></div></div></div><div class="text_cell_render rendered_html" tabindex="-1"><p>Master catalogue used: <strong>master_catalogue_akari-sep_20180122.fits</strong><br>
+</div></div></div><div class="cell text_cell rendered unselected" tabindex="2"><div class="prompt input_prompt"></div><div class="inner_cell"><div class="ctb_hideshow"><div class="celltoolbar"></div></div><div class="input_area"><div class="CodeMirror cm-s-default CodeMirror-wrap"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 158.6px; left: 333.6px;"><textarea style="position: absolute; padding: 0px; width: 1px; height: 1em; outline: medium none;" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="0" wrap="off"></textarea></div><div class="CodeMirror-vscrollbar" cm-not-content="true" style="bottom: 0px;"><div style="min-width: 1px; height: 0px;"></div></div><div class="CodeMirror-hscrollbar" cm-not-content="true"><div style="height: 100%; min-height: 1px; width: 0px;"></div></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1" draggable="true"><div class="CodeMirror-sizer" style="margin-left: 0px; padding-right: 0px; padding-bottom: 0px; margin-bottom: -15px; border-right-width: 15px; min-height: 300px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines"><div style="position: relative; outline: medium none;"><div class="CodeMirror-measure"><pre><span>xxxxxxxxxx</span></pre></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-cursors" style="visibility: hidden;"><div class="CodeMirror-cursor" style="left: 328px; top: 153px; height: 17px;">&nbsp;</div></div><div class="CodeMirror-code" style=""><pre class=" CodeMirror-line "><span>Master catalogue used: <span class="cm-strong">__master_catalogue_akari-sep_20180122.fits__</span><span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span>Number of rows: 844,172</span></pre><pre class=" CodeMirror-line "><span><span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span>Surveys included:<span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span><span cm-text="">​</span></span></pre><pre class=" CodeMirror-line "><span><span cm-text="">​</span></span></pre><pre class=" CodeMirror-line "><span>| Survey | Telescope / Instrument  | Filters (detection band in bold)  | Location        |</span></pre><pre class=" CodeMirror-line "><span>|--------|-------------------------|:---------------------------------:|-----------------|</span></pre><pre class=" CodeMirror-line "><span>| VISTA-VHS | VISTA/VIRCAM         |   JHKs                            | dmu0_VISTA-VHS  |<span class="cm-trailing-space-a"> </span><span class="cm-trailing-space-b"> </span><span class="cm-trailing-space-a"> </span><span class="cm-trailing-space-new-line"> </span></span></pre><pre class=" CodeMirror-line "><span>| DES   | Blanco/DECam             |     grizy                         | dmu0_DES        | </span></pre><pre class=" CodeMirror-line "><span>| SIMES | Spitzer/IRAC             |   IRAC12                          | dmu0_SIMES      |</span></pre><pre class=" CodeMirror-line "><span> </span></pre><pre class=" CodeMirror-line "><span><span cm-text="">​</span></span></pre><pre class=" CodeMirror-line "><span><span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span><span class="cm-strong">__NB: On AKARI-SEP there are no bands with multiple observations. We then cannot flag outliers.</span><span class="cm-tag cm-bracket">&lt;</span><span class="cm-tag">br</span><span class="cm-tag cm-bracket">&gt;</span></span></pre><pre class=" CodeMirror-line "><span><span class="cm-strong">Also, there are no sources, with "weird" magnitude or magnitude error, to flag in this field.__</span></span></pre><pre class=" CodeMirror-line "><span><span cm-text="">​</span></span></pre></div></div></div></div></div><div style="position: absolute; height: 15px; width: 1px; top: 300px;"></div><div class="CodeMirror-gutters" style="display: none; height: 315px;"></div></div></div></div><div class="text_cell_render rendered_html" tabindex="-1"><p>Master catalogue used: <strong>master_catalogue_akari-sep_20180122.fits</strong><br>
 Number of rows: 844,172
 <br>
 Surveys included:<br></p>
@@ -548,40 +548,22 @@ Surveys included:<br></p>
 </thead>
 <tbody>
 <tr>
-<td>ESIS</td>
-<td>ESO 2.2/WFI</td>
-<td style="text-align: center">BVR</td>
-<td>dmu0_ESIS-VOICE</td>
+<td>VISTA-VHS</td>
+<td>VISTA/VIRCAM</td>
+<td style="text-align: center">JHKs</td>
+<td>dmu0_VISTA-VHS</td>
 </tr>
 <tr>
-<td>DES-DEEP</td>
-<td>Blanco/DECAM</td>
+<td>DES</td>
+<td>Blanco/DECam</td>
 <td style="text-align: center">grizy</td>
 <td>dmu0_DES</td>
 </tr>
 <tr>
-<td>VIDEO</td>
-<td>VISTA/VIRCAM</td>
-<td style="text-align: center">Y,J,H,Ks</td>
-<td>dmu0_VISTA-VIDEO</td>
-</tr>
-<tr>
-<td>VHS</td>
-<td>VISTA/VIRCAM</td>
-<td style="text-align: center">Y,J,H,Ks</td>
-<td>dmu0_VISTA-VHS</td>
-</tr>
-<tr>
-<td>SWIRE</td>
-<td>Spitzer/IRAC MIPS</td>
-<td style="text-align: center">IRAC1234</td>
-<td>dmu0_DataFusion-Spitzer</td>
-</tr>
-<tr>
-<td>SERVS</td>
+<td>SIMES</td>
 <td>Spitzer/IRAC</td>
 <td style="text-align: center">IRAC12</td>
-<td>dmu0_DataFusion-Spitzer</td>
+<td>dmu0_SIMES</td>
 </tr>
 </tbody>
 </table>
