Correct cross-matching radius phrase

--- a/dmu1/dmu1_ml_ELAIS-S1/notebook_output/2_Merging.html
+++ b/dmu1/dmu1_ml_ELAIS-S1/notebook_output/2_Merging.html
@@ -11893,7 +11893,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="II---Merging-tables">II - Merging tables<a class="anchor-link" href="#II---Merging-tables">&#194;&#182;</a></h2><p>We merge in order of increasing wavelength: VIDEO, VHS, VOICE, SERVS, SWIRE.</p>
-<p>At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius.</p>
+<p>At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius.</p>
 
 </div>
 </div>
