--- a/dmu1/dmu1_ml_Herschel-Stripe-82/notebook_output/2_Merging.html
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/notebook_output/2_Merging.html
@@ -11916,7 +11916,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="II---Merging-tables">II - Merging tables<a class="anchor-link" href="#II---Merging-tables">&#194;&#182;</a></h2><p>We first merge the optical catalogues and then add the infrared ones: HSC, VHS, VICS82, UKIDSS-LAS, PanSTARRS, SHELA, SpIES.</p>
-<p>At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius.</p>
+<p>At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius.</p>
 
 </div>
 </div>
