--- a/dmu1/dmu1_ml_XMM-LSS/notebook_output/2.6_Merging_low_memory.html
+++ b/dmu1/dmu1_ml_XMM-LSS/notebook_output/2.6_Merging_low_memory.html
@@ -12040,7 +12040,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="II---Merging-tables">II - Merging tables<a class="anchor-link" href="#II---Merging-tables">&#194;&#182;</a></h2><p>We first merge the optical catalogues and then add the infrared ones. We start with PanSTARRS because it coevrs the whole field.</p>
-<p>At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius.</p>
+<p>At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius.</p>
 
 </div>
 </div>
