Replace vohedamtest URLs to herschel-vos.phys.sussex.ac.uk

--- a/dmu1/dmu1_ml_CDFS-SWIRE/notebook_output/1.2_SERVS.html
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/notebook_output/1.2_SERVS.html
@@ -11776,7 +11776,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="CDFS-SWIRE-master-catalogue">CDFS SWIRE master catalogue<a class="anchor-link" href="#CDFS-SWIRE-master-catalogue">&#194;&#182;</a></h1><h2 id="Preparation-of-Spitzer-datafusion-SERVS-data">Preparation of Spitzer datafusion SERVS data<a class="anchor-link" href="#Preparation-of-Spitzer-datafusion-SERVS-data">&#194;&#182;</a></h2><p>The data is in 'dmu0_DataFusion-Spitzer'</p>
-<p>The Spitzer catalogues were produced by the datafusion team are available in the HELP virtual observatory server. They are described there: <a href="http://vohedamtest.lam.fr/browse/df_spitzer/q">http://vohedamtest.lam.fr/browse/df_spitzer/q</a>.</p>
+<p>The Spitzer catalogues were produced by the datafusion team are available in the HELP virtual observatory server. They are described there: <a href="https://herschel-vos.phys.sussex.ac.uk/browse/df_spitzer/q">https://herschel-vos.phys.sussex.ac.uk/browse/df_spitzer/q</a>.</p>
 <p>Lucia told that the magnitudes are aperture corrected.</p>
 <p>In the catalouge, we keep:</p>
 <ul>
