Work on the web viewer

--- a/dmu31/dmu31_HiPS/viewer/index.html
+++ b/dmu31/dmu31_HiPS/viewer/index.html
@@ -89,8 +89,9 @@
                       {color: '#84f', lineWidth: 1}
                               );
         aladin.addMOC(moc);
+        aladin.gotoRaDec(15, 0);
         aladin.setBaseImageLayer('help_spire_rgb');
-        aladin.gotoRaDec(15, 0)
+
         //aladin.setOverlayImageLayer(
         //    aladin.createImageSurvey('help', 
         //                             'help', 
