--- a/dmu31/dmu31_HiPS/viewer/index.html
+++ b/dmu31/dmu31_HiPS/viewer/index.html
@@ -94,8 +94,10 @@ aladin.setImageSurvey('help_spire_rgb');
                   'http://hedam.lam.fr/HELP/dataproducts/dmu31/dmu31_HiPS/data/help_dr1/', 
                                  {onClick: 'showTable', name: 'help_dr1'}
                                  );
-        
+        http://hedam.lam.fr/HELP/dataproducts/dmu31/dmu31_HiPS/data/help_dr1_alist/
     var hipsCats = {
+        'help_alist': A.catalogHiPS('http://hedam.lam.fr/HELP/dataproducts/dmu31/dmu31_HiPS/data/help_dr1_alist/',    
+                               {name: 'help_dr1_alist'}),
         'help': A.catalogHiPS('http://hedam.lam.fr/HELP/dataproducts/dmu31/dmu31_HiPS/data/help_dr1',    
                                {name: 'help_dr1', 
                                shape: 'circle', sourceSize: 8, color: '#d66bae'}),
@@ -105,10 +107,11 @@ aladin.setImageSurvey('help_spire_rgb');
                                 {name: 'Simbad', color: '#6dbdce'})
                    };
 
-    //hipsCats['help'].hide();
+    hipsCats['help'].hide();
     hipsCats['gdr2'].hide();
     hipsCats['simbad'].hide();
 
+    aladin.addCatalog(hipsCats['help_alist']);
     aladin.addCatalog(hipsCats['help']);
     aladin.addCatalog(hipsCats['gdr2']);
     aladin.addCatalog(hipsCats['simbad']);
