--- a/dmu31/dmu31_HiPS/viewer/index.html
+++ b/dmu31/dmu31_HiPS/viewer/index.html
@@ -11,7 +11,15 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
 
     <!-- Aladin Lite container at requested dimensions 100%;height:90%;" width:800px;height:400px;> -->
+
     <div id="aladin-lite-div" style="100%;height:90%">
+    <div id='cigale-div' 
+    style = "position:absolute; 
+             height:240px;
+             width:320px;
+             right:40px; 
+             bottom:100px; 
+             z-index: 10;">&nbsp; </div>
     <div class="aladin-zoomControl"><a href="#" class="zoomPlus" title="Zoom in">+</a><a href="#" class="zoomMinus" title="Zoom out">–</a></div>
     
     
