Added help logo

--- a/dmu31/dmu31_HiPS/viewer/index.html
+++ b/dmu31/dmu31_HiPS/viewer/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE>
 <html>
-  <body>
-    
-    <h1>HELP general interactive map</h1>
 
+  <body>
+
+    <h1><a href="https://herschel.sussex.ac.uk/help_logo_web"><img src="http://hedam.lam.fr/HELP/dataproducts/help_logo_web.png" alt="logo" /></a>HELP image and catalogue viewer</h1>
+   <!-- <div style="positions:absolute; 
+    height:20px; 
+    width:400px; 
+    right:0; 
+    top:0;
+    padding:0;
+    margin:0;"> <i>Click on an object to show its SED and links to the full data.</i></div>-->
     <!-- Aladin Lite CSS style file -->
     <link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
 
@@ -12,7 +19,9 @@
 
     <!-- Aladin Lite container at requested dimensions 100%;height:90%;" width:800px;height:400px;> -->
 
-    <div id="aladin-lite-div" style="100%;height:90%">
+
+    
+    <div id="aladin-lite-div" style="100%;height:85%">
     <div id='cigale-div' 
     style = "position:absolute; 
              height:240px;
