More HTML bug fixing

--- a/dmu31/dmu31_HiPS/viewer/index.html
+++ b/dmu31/dmu31_HiPS/viewer/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE>
 <html>
+<head>
+<style>
 
+.topright {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  font-size: 18px;
+}
+
+
+</style>
+</head>
   <body>
 
-    <h1><a href="https://herschel.sussex.ac.uk/help_logo_web"><img src="http://hedam.lam.fr/HELP/dataproducts/help_logo_web.png" alt="logo" /></a>HELP image and catalogue viewer</h1>
+  <h1>HELP image and catalogue viewer</h1> 
+   <div class="topright"><i>Click an object to see its SED and links to more information.</i><img src="http://hedam.lam.fr/HELP/dataproducts/TEMPLATES/help_logo_web.png" alt="HELP" width="50" height="50"></div>
    <!-- <div style="positions:absolute; 
     height:20px; 
     width:400px; 
