--- a/dmu31/dmu31_HiPS/viewer/index.html
+++ b/dmu31/dmu31_HiPS/viewer/index.html
@@ -34,7 +34,7 @@
 
 
     
-    <div id="aladin-lite-div" style="100%;height:85%">
+    <div id="aladin-lite-div" style="100%;height:calc(100% - 90px)">
     <div id='cigale-div' 
     style = "position:absolute; 
              height:240px;
