Added full masterlist HiPS to viewer
At this stage it only has ra dec it would be good to make a simple plot of its flux measurements so that the objects can be clicked as for the Alist

--- a/dmu31/dmu31_HiPS/viewer/index.html
+++ b/dmu31/dmu31_HiPS/viewer/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE>
 <html>
 <head>
+<!-- Aladin Lite CSS style file -->
+<link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
 <style>
 
 .topright {
@@ -24,8 +26,7 @@
     top:0;
     padding:0;
     margin:0;"> <i>Click on an object to show its SED and links to the full data.</i></div>-->
-    <!-- Aladin Lite CSS style file -->
-    <link rel="stylesheet" href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
+
 
     <!-- Aladin Lite has a dependency on the jQuery library -->
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
@@ -63,7 +64,7 @@
             charset="utf-8">
     </script>
 
-    <!-- Creation of Aladin Lite instance with initial parameters -->
+    <!-- HELP specific js -->
     <script src="help_app.js"></script>
   
 
