--- a/dmu31/dmu31_HiPS/viewer/test.html
+++ b/dmu31/dmu31_HiPS/viewer/test.html
@@ -28,8 +28,9 @@
     margin:0;"> <i>Click on an object to show its SED and links to the full data.</i></div>-->
 
 
-    <!-- Aladin Lite has a dependency on the jQuery library -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
+    <!-- Use Jquery and plotly - where should these go - async? -->
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js" charset="utf-8"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- Aladin Lite container at requested dimensions 100%;height:90%;" width:800px;height:400px;> -->
 
