test pages for each field

--- a/dmu31/dmu31_Field_overviews/CDFS-SWIRE.html
+++ b/dmu31/dmu31_Field_overviews/CDFS-SWIRE.html
@@ -11,7 +11,7 @@
 </a>
 <h1>Overview of HELP field CDFS-SWIRE</h1>
 <p>This HELP field is defined by SPIRE coverage of the Chandra Deep Field South (CDFS) Spitzer Wide InfraRed Extragalactic (SWIRE) survey field.. </p>
-<p>Full information on each of these surveys is available at those links. Click <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/adql/query/form?__nevow_form__=genForm&query=SELECT%20TOP%2010%20help_id%2C%20redshift%2C%20f_spire_250%2C%20f_best_g%2C%20f_best_ks%2C%20f_irac_i1%2C%20cigale_sfr%20from%20help_a_list.main%20WHERE%20cigale_sfr%20%3E1%20AND%20field%3D%27CDFS-SWIRE%27&_TIMEOUT=5&_FORMAT=HTML&submit=Go">here</a> to get a simple <a href="https://herschel-vos.phys.sussex.ac.uk/">VOX</a> query to get you started.</p>
+<p>Click <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/adql/query/form?__nevow_form__=genForm&query=SELECT%20TOP%2010%20help_id%2C%20redshift%2C%20f_spire_250%2C%20f_best_g%2C%20f_best_ks%2C%20f_irac_i1%2C%20cigale_sfr%20from%20help_a_list.main%20WHERE%20cigale_sfr%20%3E1%20AND%20field%3D%27CDFS-SWIRE%27&_TIMEOUT=5&_FORMAT=HTML&submit=Go">here</a> to get a simple <a href="https://herschel-vos.phys.sussex.ac.uk/">VOX</a> query to get you started.</p>
 
 
 
